# aes-ctr-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh
src/: CMakeLists.txt  aes.cu  aes.hh  config.cc  config.hh  ctr.hh  enc.cu  fsc.hh  timer.hh  util.hh
test/: CMakeLists.txt  test_aes.cc  test_aes_cuda.cu  test_ctr.cc  test_ctr_cuda.cu  test_fsc.cc  test_fsc_cuda.cu
