set(STATIC_LIBRARY aescuda)
set(SHARED_LIBRARY aescuda_shared)

add_library(${STATIC_LIBRARY} STATIC aes.cu)
add_library(${PROJECT_NAME}::Lib ALIAS ${STATIC_LIBRARY})
add_library(${SHARED_LIBRARY} SHARED aes.cu)

set_property(TARGET ${STATIC_LIBRARY} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
set_property(TARGET ${SHARED_LIBRARY} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
